// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test UI elements Renders a common button 1`] = `
<button
  className="px-8 group py-2 relative flex justify-center items-center"
>
  <div
    className="absolute top-0 left-0 w-full h-full border-b border-neutral-500 scale-x-0 group-hover:scale-x-100 transition-all duration-200 ease-out"
  />
  Click Me
</button>
`;

exports[`Test UI elements Renders an action primary button 1`] = `
<button
  className="px-8 py-4 w-full rounded-lg hover:bg-[#2F405D] transition-all duration-100 ease-out text-slate-50 font-bold bg-slate-800"
  onClick={[MockFunction]}
  type="button"
>
  Click Me
</button>
`;

exports[`Test UI elements Renders an action secondary button 1`] = `
<button
  className="px-8 w-full py-4 rounded-lg text-slate-50 font-bold bg-gray-500 hover:bg-[#858C99] transition-all duration-100 ease-out"
  onClick={[MockFunction]}
  type="button"
>
  Click Me
</button>
`;
